--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-20  Michael Meissner  <meissner@redhat.com>
+
+	* doc/invoke.texi (Optimize Options): Document that -O2 sets
+	-fstrict-aliasing.
+
 2002-03-20  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Emit a
