--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Jason Merrill  <jason@redhat.com>
+
+	* config/i386/cygwin.h (DWARF2_UNWIND_INFO): Define to 0.
+
 2002-03-20  Michael Meissner  <meissner@redhat.com>
 
 	* doc/invoke.texi (Optimize Options): Document that -O2 sets
