--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Jason Merrill  <jason@redhat.com>
+
+	* config/i386/cygwin.h (DWARF2_UNWIND_INFO): Define to 0.
+
 2002-03-20  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Emit a
