* g++.old-deja/g++.eh/ia64-1.C: Use [ijkl]_[0-9] as variable names. 	(A, E): Handle this.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51107 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* g++.old-deja/g++.eh/ia64-1.C: Use [ijkl]_[0-9] as variable names. 
+	(A, E): Handle this.
+
 2002-03-20  Jason Merrill  <jason@redhat.com>
 
 	* lib/prune.exp (prune_gcc_output): Ignore Cygwin warning about
