--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* acinclude.m4 (GLIBCPP_CHECK_STDLIB_DECL_AND_LINKAGE_3): New.
+	(GLIBCPP_CONFIGURE_TESTSUITE): Use it to check for setenv.
+	* aclocal.m4: Regenerate.
+	* configure: Likewise.
+
 2002-03-20  Paolo Carlini  <pcarlini@unitus.it>
 
 	* include/bits/locale_facets.tcc
