--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/4195
+	* genrecog.c (maybe_both_true_mode): Remove.
+	(maybe_both_true_2, write_switch): Revert 2001-07-17 changes.
+	* machmode.def (Pmode): Likewise.
+
 2002-03-21  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* fixinc/inclhack.def (alpha_assert): Fix assert macro in Tru64
