PR c/5354         * c-common.c (c_expand_expr): Preserve result of a statement         expression if needed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51120 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-21  Eric Botcazou <ebotcazou@multimania.com>
+	    Richard Henderson  <rth@redhat.com>
+
+	PR c/5354:
+	* c-common.c (c_expand_expr): Preserve result of a statement
+	expression if needed.
+
 2002-03-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR bootstrap/4195
