* config/i386/sol2.h (ASM_QUAD): Undef.  Fixes PR bootstrap/5948.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51133 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-21  Tom Tromey  <tromey@redhat.com>
+
+	* config/i386/sol2.h (ASM_QUAD): Undef.  Fixes PR bootstrap/5948.
+
 2002-03-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/contrib.texi (Contributors): Use GNU/Linux instead of Linux
