* config/rs6000/rs6000.c (rs6000_select_rtx_section): Put symbolic         constants in .data when -fpic.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51135 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Richard Henderson  <rth@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_select_rtx_section): Put symbolic
+	constants in .data when -fpic.
+
 2002-03-21  Tom Tromey  <tromey@redhat.com>
 
 	* config/i386/sol2.h (ASM_QUAD): Undef.  Fixes PR bootstrap/5948.
