--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (build_access_to_thisn): Stop when FROM is not an inner
+	class.
+
 2002-03-18  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* builtins.c (define_builtin): Do nothing if `type' is null.
