--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (build_access_to_thisn): Stop when FROM is not an inner
+	class.
+
 2002-03-21  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-tree.h (pushdecl, pushlevel, poplevel, set_block,
