Enable libgcj for xscale-elf
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51140 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/ChangeLog
+++ b/gcc-3_1-branch/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-20  Anthony Green  <green@redhat.com>
+
+	* configure.in: Enable libgcj for xscale-elf target.
+
 2002-03-16  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltmain.sh (relink_command): Fix typo in previous change.
