* config/avr/avr.md (length): Fix length computation for 	conditional branches.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51142 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/avr/avr.md (length): Fix length computation for
+	conditional branches.
+
 2002-03-21  Richard Henderson  <rth@redhat.com>
 
 	* config/rs6000/rs6000.c (rs6000_select_rtx_section): Put symbolic
