* configure.in: Enable alpha*-*-freebsd*. 	* configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51143 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Loren J. Rittle  <ljrittle@acm.org>
+
+	* configure.in: Enable alpha*-*-freebsd*.
+	* configure: Rebuilt.
+
 2002-03-17  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am: libfficonvenience -> libffi_convenience.
