* config/avr/avr.md (length): Fix length computation for 	conditional branches.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51144 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/avr/avr.md (length): Fix length computation for
+	conditional branches.
+
 2002-03-21  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in (fold-const.o, stor-layout.o, stmt.o,
