2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
        * langhooks.c (lhd_tree_inlining_cannot_inline_tree_fn): Check
        flag_really_no_inline instead of optimize == 0.

        * c-objc-common.c (c_cannot_inline_tree_fn): Same.

        * cp/tree.c (cp_cannot_inline_tree_fn): Same.

        * flags.h (flag_really_no_inline): New.

        * c-common.c (c_common_post_options): Initialzie
        flag_really_no_inline.

        * toplev.c (flag_really_no_inline): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51145 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
+
+        * langhooks.c (lhd_tree_inlining_cannot_inline_tree_fn): Check
+        flag_really_no_inline instead of optimize == 0.
+
+        * c-objc-common.c (c_cannot_inline_tree_fn): Same.
+
+        * cp/tree.c (cp_cannot_inline_tree_fn): Same.
+
+        * flags.h (flag_really_no_inline): New.
+
+        * c-common.c (c_common_post_options): Initialzie
+        flag_really_no_inline.
+
+        * toplev.c (flag_really_no_inline): New.
+
 2002-03-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/avr/avr.md (length): Fix length computation for
