2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
        * tree.c (cp_cannot_inline_tree_fn): Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51148 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
+
+        * tree.c (cp_cannot_inline_tree_fn): Same.
+
 2002-03-20  Jason Merrill  <jason@redhat.com>
 
 	PR c++/2136
