--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
+
+        * tree.c (cp_cannot_inline_tree_fn): Same.
+
 2002-03-21  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp-tree.h (pushdecl, pushlevel, poplevel, set_block,
