PR c/5597         * c-typeck.c (process_init_element): Flag non-static         initialization of a flexible array member as illegal.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-21  Eric Botcazou <ebotcazou@multimania.com>
+
+	PR c/5597
+	* c-typeck.c (process_init_element): Flag non-static
+	initialization of a flexible array member as illegal.
+
 2002-03-22  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/t-linux64: New.
