--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-21  DJ Delorie  <dj@redhat.com>
+
+	* bb-reorder.c (make_reorder_chain_1): Protect against
+	when redundant edges are omitted.
+	* predict.c (dump_prediction): Likewise.
+
 2002-03-21  Richard Henderson  <rth@redhat.com>
 
 	PR target/5996
