* config/mips/mips.h (FUNCTION_ARG_REGNO_P): Simplify. 	(CLASS_UNITS): Undefine. 	(CLASS_MAX_NREGS): Use FP_INC. 	* config/mips/mips.c (compute_frame_size): Likewise. 	(override_options): Use FP_INC and UNITS_PER_FPVALUE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51166 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-22  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.h (FUNCTION_ARG_REGNO_P): Simplify.
+	(CLASS_UNITS): Undefine.
+	(CLASS_MAX_NREGS): Use FP_INC.
+	* config/mips/mips.c (compute_frame_size): Likewise.
+	(override_options): Use FP_INC and UNITS_PER_FPVALUE.
+
 2002-03-22  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpplex.c (parse_identifier_slow): Rename parse_slow, adjust
