--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-21  Andrew Haley  <aph@redhat.com>
+
+	* libjava.lang/Thread_Interrupt.java (Looper.calibrate): New.
+	(yields): New.
+
 2002-03-18  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.jni/jni.exp (gcj_jni_test_one): Find libstdc++ in build
