* real.c (eiisneg): Move outside #ifdef NANS.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-22  Richard Sandiford  <rsandifo@redhat.com>
+
+	* real.c (eiisneg): Move outside #ifdef NANS.
+
 Fri Mar 22 12:08:36 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (outgoing_edges_math): Fix condition; relax
