* toplev.c (flag_loop_optimize, flag_crossjumping): 	New static variables. 	(rest_of_compilation): Conditionalize crossjumping and 	loop optimizer. 	(parse_options_and_default_flags): Default loop_optimize and 	crossjumping. 	(lang_independent_options): Add -fcrossjumping and -floop-optimize 	* invoke.texi (crossjumping, loop-optimize): Document.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51175 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+Fri Mar 22 16:30:42 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (flag_loop_optimize, flag_crossjumping):
+	New static variables.
+	(rest_of_compilation): Conditionalize crossjumping and
+	loop optimizer.
+	(parse_options_and_default_flags): Default loop_optimize and
+	crossjumping.
+	(lang_independent_options): Add -fcrossjumping and -floop-optimize
+	* invoke.texi (crossjumping, loop-optimize): Document.
+
 2002-03-22  Richard Sandiford  <rsandifo@redhat.com>
 
 	* real.c (eiisneg): Move outside #ifdef NANS.
