--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -26,6 +26,8 @@
 
 	* gcc.dg/struct-by-value-1.c: New test.
 
+	* gcc.dg/20020319-1.c: New test.
+
 2002-03-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/opt/conj1.C: New test.
