PR target/3177         * config/ia64/ia64.h (CUMULATIVE_ARGS): Add int_regs.         (INIT_CUMULATIVE_ARGS, INIT_CUMULATIVE_INCOMING_ARGS): Update.         * config/ia64/ia64.c (ia64_function_arg_advance): Set int_regs.         (ia64_expand_prologue): Look at int_regs, not words, for number         of incomming int regs.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51180 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-03-22  Richard Henderson  <rth@redhat.com>
+
+	PR target/3177
+	* config/ia64/ia64.h (CUMULATIVE_ARGS): Add int_regs.
+	(INIT_CUMULATIVE_ARGS, INIT_CUMULATIVE_INCOMING_ARGS): Update.
+	* config/ia64/ia64.c (ia64_function_arg_advance): Set int_regs.
+	(ia64_expand_prologue): Look at int_regs, not words, for number
+	of incomming int regs.
+
 2002-03-22  Andrew MacLeod  <amacleod@redhat.com>
 
 	* expr.c (expand_expr): A RESULT_DECL is part of a call.
