--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8307,8 +8307,7 @@
   mask  = ((HOST_WIDE_INT)1 << (pos + len)) - 1;
   mask &= ~(((HOST_WIDE_INT)1 << pos) - 1);
 
-  operands[3] = gen_rtx_AND (mode, operands[0],
-			     GEN_INT (trunc_int_for_mode (mask, mode)));
+  operands[3] = gen_rtx_AND (mode, operands[0], gen_int_mode (mask, mode));
 })
 
 ;; %%% This used to optimize known byte-wide and operations to memory,
@@ -9507,8 +9506,7 @@
 	  operands[0] = force_reg (SFmode, operands[0]);
 	  emit_move_insn (reg,
 			  gen_lowpart (SFmode,
-				       GEN_INT (trunc_int_for_mode (0x80000000,
-							            SImode))));
+				       gen_int_mode (0x80000000, SImode)));
 	  emit_insn (gen_negsf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -9602,7 +9600,7 @@
   "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
   [(parallel [(set (match_dup 0) (xor:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
-  "operands[1] = GEN_INT (trunc_int_for_mode (0x80000000, SImode));
+  "operands[1] = gen_int_mode (0x80000000, SImode);
    operands[0] = gen_rtx_REG (SImode, REGNO (operands[0]));")
 
 (define_split
@@ -9619,7 +9617,7 @@
   if (size >= 12)
     size = 10;
   operands[0] = adjust_address (operands[0], QImode, size - 1);
-  operands[1] = GEN_INT (trunc_int_for_mode (0x80, QImode));
+  operands[1] = gen_int_mode (0x80, QImode);
 })
 
 (define_expand "negdf2"
@@ -9639,8 +9637,7 @@
 	     in register.  */
 	  rtx reg = gen_reg_rtx (DFmode);
 #if HOST_BITS_PER_WIDE_INT >= 64
-	  rtx imm = GEN_INT (trunc_int_for_mode(((HOST_WIDE_INT)1) << 63,
-					        DImode));
+	  rtx imm = gen_int_mode (((HOST_WIDE_INT)1) << 63, DImode);
 #else
 	  rtx imm = immed_double_const (0, 0x80000000, DImode);
 #endif
@@ -9779,7 +9776,7 @@
    && !FP_REGNO_P (REGNO (operands[0]))"
   [(parallel [(set (match_dup 3) (xor:SI (match_dup 3) (match_dup 4)))
 	      (clobber (reg:CC 17))])]
-  "operands[4] = GEN_INT (trunc_int_for_mode (0x80000000, SImode));
+  "operands[4] = gen_int_mode (0x80000000, SImode);
    split_di (operands+0, 1, operands+2, operands+3);")
 
 (define_expand "negxf2"
@@ -9970,8 +9967,7 @@
 	  operands[0] = force_reg (SFmode, operands[0]);
 	  emit_move_insn (reg,
 			  gen_lowpart (SFmode,
-				       GEN_INT (trunc_int_for_mode (0x80000000,
-							            SImode))));
+				       gen_int_mode (0x80000000, SImode)));
 	  emit_insn (gen_abssf2_ifs (operands[0], operands[1], reg));
 	  if (dest != operands[0])
 	    emit_move_insn (dest, operands[0]);
@@ -10054,7 +10050,7 @@
   "TARGET_80387 && reload_completed && !FP_REGNO_P (REGNO (operands[0]))"
   [(parallel [(set (match_dup 0) (and:SI (match_dup 0) (match_dup 1)))
 	      (clobber (reg:CC 17))])]
-  "operands[1] = GEN_INT (trunc_int_for_mode (~0x80000000, SImode));
+  "operands[1] = gen_int_mode (~0x80000000, SImode);
    operands[0] = gen_rtx_REG (SImode, REGNO (operands[0]));")
 
 (define_split
@@ -10071,7 +10067,7 @@
   if (size >= 12)
     size = 10;
   operands[0] = adjust_address (operands[0], QImode, size - 1);
-  operands[1] = GEN_INT (trunc_int_for_mode (~0x80, QImode));
+  operands[1] = gen_int_mode (~0x80, QImode);
 })
 
 (define_expand "absdf2"
@@ -10091,8 +10087,7 @@
 	     in register.  */
 	  rtx reg = gen_reg_rtx (DFmode);
 #if HOST_BITS_PER_WIDE_INT >= 64
-	  rtx imm = GEN_INT (trunc_int_for_mode(((HOST_WIDE_INT)1) << 63,
-					        DImode));
+	  rtx imm = gen_int_mode (((HOST_WIDE_INT)1) << 63, DImode);
 #else
 	  rtx imm = immed_double_const (0, 0x80000000, DImode);
 #endif
@@ -10209,7 +10204,7 @@
    !FP_REGNO_P (REGNO (operands[0]))"
   [(parallel [(set (match_dup 3) (and:SI (match_dup 3) (match_dup 4)))
 	      (clobber (reg:CC 17))])]
-  "operands[4] = GEN_INT (trunc_int_for_mode (~0x80000000, SImode));
+  "operands[4] = gen_int_mode (~0x80000000, SImode);
    split_di (operands+0, 1, operands+2, operands+3);")
 
 (define_expand "absxf2"
@@ -10660,8 +10655,7 @@
   [(set (match_dup 0)
 	(mult:DI (match_dup 1)
 		 (match_dup 2)))]
-  "operands[2] = GEN_INT (trunc_int_for_mode (1 << INTVAL (operands[2]),
-					      DImode));")
+  "operands[2] = gen_int_mode (1 << INTVAL (operands[2]), DImode);")
 
 ;; This pattern can't accept a variable shift count, since shifts by
 ;; zero don't affect the flags.  We assume that shifts by constant
@@ -10868,8 +10862,7 @@
   rtx pat;
   operands[0] = gen_lowpart (SImode, operands[0]);
   operands[1] = gen_lowpart (Pmode, operands[1]);
-  operands[2] = GEN_INT (trunc_int_for_mode (1 << INTVAL (operands[2]),
-					     Pmode));
+  operands[2] = gen_int_mode (1 << INTVAL (operands[2]), Pmode);
   pat = gen_rtx_MULT (Pmode, operands[1], operands[2]);
   if (Pmode != SImode)
     pat = gen_rtx_SUBREG (SImode, pat, 0);
@@ -10927,8 +10920,7 @@
   [(set (match_dup 0) (zero_extend:DI (subreg:SI (mult:SI (match_dup 1) (match_dup 2)) 0)))]
 {
   operands[1] = gen_lowpart (Pmode, operands[1]);
-  operands[2] = GEN_INT (trunc_int_for_mode (1 << INTVAL (operands[2]),
-					     Pmode));
+  operands[2] = gen_int_mode (1 << INTVAL (operands[2]), Pmode);
 })
 
 ;; This pattern can't accept a variable shift count, since shifts by
@@ -16863,9 +16855,9 @@
 	      (set (match_dup 0)
 		   (and:SI (match_dup 1) (match_dup 2)))])]
   "operands[2]
-     = GEN_INT (trunc_int_for_mode (INTVAL (operands[2])
-				    & GET_MODE_MASK (GET_MODE (operands[0])),
-				    SImode));
+     = gen_int_mode (INTVAL (operands[2])
+		     & GET_MODE_MASK (GET_MODE (operands[0])),
+		     SImode);
    operands[0] = gen_lowpart (SImode, operands[0]);
    operands[1] = gen_lowpart (SImode, operands[1]);")
 
@@ -16883,9 +16875,9 @@
 	(compare:CCNO (and:SI (match_dup 0) (match_dup 1))
 		      (const_int 0)))]
   "operands[1]
-     = GEN_INT (trunc_int_for_mode (INTVAL (operands[1])
-				    & GET_MODE_MASK (GET_MODE (operands[0])),
-				    SImode));
+     = gen_int_mode (INTVAL (operands[1])
+		     & GET_MODE_MASK (GET_MODE (operands[0])),
+		     SImode);
    operands[0] = gen_lowpart (SImode, operands[0]);")
 
 (define_split
