--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-22  Phil Edwards  <pme@gcc.gnu.org>
+
+	* gcc.dg/cpp/extratokens2.c:  New file.
+
 2002-03-21  David Edelsohn  <edelsohn@gnu.org>
 
         * gcc.dg/20020312-2.c: Add rs6000 target.
