* config/mips/mips.h (MASK_RETURN_ADDR): Define. (TARGET_PTRMEMFUNC_VBIT_LOCATION): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51191 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/mips/mips.h (MASK_RETURN_ADDR): Define.
+	(TARGET_PTRMEMFUNC_VBIT_LOCATION): Define.
+
 2002-03-22  Phil Edwards  <pme@gcc.gnu.org>
 
 	* cpplib.h (struct cpp_options):  New member, warn_endif_labels.
